# 808x-final-project

./: .gitignore  CMakeLists.txt  DoxyfileGroup4  README.md  cpplint.sh  package.xml
.github/workflows/: main.yml
docs/html/: annotated.html  class_manipulation-members.html  class_manipulation.html  class_manipulation__coll__graph.map  class_manipulation__inherit__graph.md5  class_navigation-members.html  class_navigation.html  class_navigation__coll__graph.md5  class_navigation__inherit__graph.map  class_perception-members.html  class_perception.html  class_perception__inherit__graph.map  class_perception__inherit__graph.md5  class_simulation-members.html  class_simulation.html  class_simulation__coll__graph.map  class_simulation__coll__graph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  manipulation_8cpp.html  manipulation_8cpp__incl.map  manipulation_8cpp__incl.md5  manipulation_8hpp.html  manipulation_8hpp__dep__incl.map  (+31 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
include/: manipulation.hpp  navigation.hpp  perception.hpp  simulation.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/808x-final-project/share/808x-final-project/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/808x-final-project/share/808x-final-project/cmake/: 808x-final-projectConfig.cmake
install/808x-final-project/share/ament_index/resource_index/package_run_dependencies/: 808x-final-project
install/808x-final-project/share/ament_index/resource_index/parent_prefix_path/: 808x-final-project
launch/: book.launch.py  library.launch.py  spwan_tb3.launch.py
log/: latest_build
models/: book.sdf
results/: cppcheck.txt  cpplint.txt
scripts/: do-tests.bash
src/: main.cpp  manipulation.cpp  navigation.cpp  perception.cpp  simulation.cpp
test/: main.cpp  test_manipulation.cpp  test_navigation.cpp  test_perception.cpp
worlds/: Table_and_Shelf  library.world  map.bt  map.pgm  map.yaml
