<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>808x-final-project</name>
  <version>0.0.0</version>
  <description>Mobile Autonomous robot for book collection and organization in library environment setting</description>
  <maintainer email="hritvikchoudhari@gmail.com">hac</maintainer>
  <maintainer email="ishanmk@umd.edu">ishanmk</maintainer>
  <maintainer email="kshitij@umd.edu">kshitij</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>gazebo_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
    
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
